# learning_projects

first_steps/: .gitignore  ast_graph.html  graph.html  pyproject.toml
first_steps/.history/: README_20251226002925.md  README_20251226002929.md  README_20251226002931.md  README_20251226002933.md  README_20251226002937.md  README_20251226003005.md  README_20251226003020.md  README_20251226003030.md  README_20251226003032.md  README_20251226003041.md  README_20251226003047.md  README_20251226003049.md  README_20251226003052.md  README_20251226003102.md  README_20251226003108.md  README_20251226003112.md  README_20251226003115.md  README_20251226003121.md  README_20251226003122.md  README_20251226003126.md  README_20251226003130.md  README_20251226003136.md  README_20251226003149.md  README_20251226003151.md  README_20251226003155.md  README_20251226003201.md  README_20251226003203.md  README_20251226003210.md  README_20251226003212.md  README_20251226003213.md  README_20251226003221.md  README_20251226003228.md  README_20251226003232.md  README_20251226003240.md  README_20251226003244.md  README_20251226003248.md  README_20251226003251.md  README_20251226003256.md  README_20251226003308.md  README_20251226003315.md  (+38 more)
first_steps/.history/data/: main_20251226194442.py  main_20251227113242.py  main_20251227113245.py  main_20251227113250.py  (+49 more)
first_steps/data/: test1.py  test2.py
first_steps/docs/: README.md
first_steps/parser/: draw_io_visualizer.py  parse_file.py  visualize_parser.py
first_steps/read_files/: compare_perf_V0.py  compare_perf_V1.py
(+995 files in other folders)
